gcc/testsuite/sarif-replay.dg/malformed-json/array-with-trailing-comma.sarif
[ 0, 1, 2, ] /* { dg-error "expected a JSON value but got '\\\]'" } */

{ dg-begin-multiline-output "" }
    1 | [ 0, 1, 2, ]
      |            ^
{ dg-end-multiline-output "" }
